config client modify

--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -26,7 +26,7 @@ spring:
   application:
     name: microservicecloud-config-client
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka-test.com:7001/eureka/
+# eureka:
+#   client:
+#     service-url:
+#       defaultZone: http://eureka-test.com:7001/eureka/
