--- a/microservicecloud-config-eureka-client.yml
+++ b/microservicecloud-config-eureka-client.yml
@@ -10,15 +10,16 @@ spring:
   profiles: dev
   application:
     name: microservicecloud-config-eureka-client
-    
+
 eureka:
   instance:
+    #hostname: localhost 
     hostname: www.eureka7001.com
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: false #false 表示不向註冊中心註冊自己
+    fetch-registry: false #false表示自己端就是註冊中心，我的職責就是維護服務實例，幷不需要去檢索服務
     service-url:
-      defaultZone: http://www.eureka7001.com:7001/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
 
 ---
 server:
@@ -31,9 +32,10 @@ spring:
 
 eureka:
   instance:
+    #hostname: localhost 
     hostname: www.eureka7001.com
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    register-with-eureka: false #false 表示不向註冊中心註冊自己
+    fetch-registry: false #false表示自己端就是註冊中心，我的職責就是維護服務實例，幷不需要去檢索服務
     service-url:
-      defaultZone: http://www.eureka7001.com:7001/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
