--- a/microservicecloud-config-eureka-client.yml
+++ b/microservicecloud-config-eureka-client.yml
@@ -14,7 +14,7 @@ spring:
 eureka:
   instance:
     #hostname: localhost 
-    hostname: www.eureka7001.com
+    hostname: www.eureka-dev.com
   client:
     register-with-eureka: false #false 表示不向註冊中心註冊自己
     fetch-registry: false #false表示自己端就是註冊中心，我的職責就是維護服務實例，幷不需要去檢索服務
@@ -33,7 +33,7 @@ spring:
 eureka:
   instance:
     #hostname: localhost 
-    hostname: www.eureka7001.com
+    hostname: www.eureka-test.com
   client:
     register-with-eureka: false #false 表示不向註冊中心註冊自己
     fetch-registry: false #false表示自己端就是註冊中心，我的職責就是維護服務實例，幷不需要去檢索服務
